# lehrfempp

./: .travis.yml  annotated.html  assembler_8h_source.html  base_8h_source.html  check__mesh__completeness_8h_source.html  classes.html  classlf_1_1assemble_1_1_dof_handler.html  classlf_1_1assemble_1_1_dynamic_f_e_dof_handler-members.html  classlf_1_1assemble_1_1_uniform_f_e_dof_handler.html  classlf_1_1base_1_1_ref_el-members.html  classlf_1_1base_1_1_ref_el.html  classlf_1_1base_1_1comm_1_1input_1_1_track.html  classlf_1_1geometry_1_1_parallelogram-members.html  classlf_1_1geometry_1_1_quad_o1-members.html  classlf_1_1geometry_1_1_quad_o1.html  classlf_1_1geometry_1_1_quad_o2-members.html  classlf_1_1geometry_1_1_refinement_pattern.html  classlf_1_1geometry_1_1_segment_o1.html  classlf_1_1geometry_1_1_segment_o2-members.html  classlf_1_1geometry_1_1_segment_o2.html  classlf_1_1geometry_1_1_tria_o1-members.html  classlf_1_1geometry_1_1_tria_o1.html  classlf_1_1geometry_1_1_tria_o2.html  classlf_1_1io_1_1_gmsh_reader.html  classlf_1_1mesh_1_1_entity.html  classlf_1_1mesh_1_1hybrid2d_1_1_mesh-members.html  classlf_1_1mesh_1_1hybrid2d_1_1_mesh_factory.html  classlf_1_1mesh_1_1hybrid2d_1_1_point-members.html  classlf_1_1mesh_1_1hybrid2d_1_1_point.html  classlf_1_1mesh_1_1hybrid2d_1_1_segment.html  classlf_1_1mesh_1_1hybrid2d_1_1_t_p_quad_mesh_builder-members.html  classlf_1_1mesh_1_1hybrid2d_1_1_t_p_triag_mesh_builder-members.html  classlf_1_1mesh_1_1hybrid2d_1_1_t_p_triag_mesh_builder.html  classlf_1_1mesh_1_1hybrid2d_1_1_torus_mesh_builder.html  (+98 more)
lib/: CMakeLists.txt
(+273 files in other folders)
